--- a/process.html
+++ b/process.html
@@ -20,30 +20,6 @@
       font-weight: 900;
     }
 
-    span.type {
-      content: '|';
-      display: inline;
-    }
-    .typed-cursor{
-      color: #ffc107;
-    }
-    /*Custom cursor animation*/
-    @keyframes blink{
-      0% { opacity:1; }
-      50% { opacity:0; }
-      100% { opacity:1; }
-    }
-    @-webkit-keyframes blink{
-      0% { opacity:1; }
-      50% { opacity:0; }
-      100% { opacity:1; }
-    }
-    @-moz-keyframes blink{
-      0% { opacity:1; }
-      50% { opacity:0; }
-      100% { opacity:1; }
-    }
-
   </style>
 
 </head>
@@ -61,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/process">Process</a>
+          <a class="nav-link active" href="/process">Process</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -88,49 +64,44 @@
   <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
     <div class="row py-5 px-3">
       <div class="col-md-7">
-        <h1 class="display-2 text-left" style="font-weight: 900;"><span class="type"></span></h1>
-        <p class="lead text-left" style="font-family: 'nunito'; font-weight: 400;">Christopher Griffith is an experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and ecommerce. He offers a unique blend of creative, technical, and analytical skills, and uses design thinking and user centered design principles to solve challenging business problems.</p>
-        <button class="btn btn-lg btn-warning my-2" type="submit">Let's talk &rarr;</button>
+        <h1 class="display-3 text-left" style="font-weight: 900;">A-User Centered Approach</h1>
+        <p class="lead text-left" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
       <div class="col-md-5">
-        <img src="desk-3.svg" class="img-fluid">
+        <img src="flow.svg" class="img-fluid">
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
+
+    <div class="row pt-5 pb-5">
+      <div class="col-md-6">
+        <img src="map.svg" class="img-fluid">
+      </div>
+      <div class="col-md-6">
+        <h2 class="display-4" style="font-weight: 900;">Lorrem Ipsum</h2>
+        <p class="lead" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+
+    <div class="row pt-5 pb-5">
+      <div class="col-md-6">
+        <h2 class="display-4" style="font-weight: 900;">Lorrem Ipsum</h2>
+        <p class="lead" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="chart.svg" class="img-fluid">
       </div>
     </div>
   </div>
   <!-- END HERO -->
-
-  <!-- FOOTER -->
-  <!-- END FOOTER -->
-
-  <!-- TYPED.JS -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function(){
-      Typed.new('.type', {
-        strings: ["Digital Marketer", "UX Designer", "UX Researcher", "Digital Strategist", "Problem Solver"],
-        stringsElement: null,
-        typeSpeed: 60,
-        startDelay: 0,
-        backSpeed: 10,
-        smartBackspace: true,
-        backDelay: 500,
-        loop: false,
-        loopCount: 1,
-        showCursor: true,
-        cursorChar: "|",
-        attr: null,
-        contentType: 'html',
-      });
-    });
-  </script>
-  <!-- END TYPED.JS -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
 
 </body>
 </html>
