--- a/process.html
+++ b/process.html
@@ -64,7 +64,7 @@
   <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
     <div class="row py-5 px-3">
       <div class="col-md-7">
-        <h1 class="display-3 text-left" style="font-weight: 900;">A-User Centered Approach</h1>
+        <h1 class="display-3 text-left" style="font-weight: 900;">A User-Centered Approach</h1>
         <p class="lead text-left" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
       <div class="col-md-5">
