--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   <!-- HERO -->
   <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
     <div class="row py-5 px-3">
-      <div class="col-md-7">
-        <h1 class="display-2 text-left" style="font-weight: 900;"><span class="type"></span></h1>
+      <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12">
+        <h1 class="display-2 text-left yu" style="font-weight: 900;"><span class="type"></span></h1>
         <p class="lead text-left" style="font-family: 'nunito'; font-weight: 400;">Christopher Griffith is an experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and ecommerce. He offers a unique blend of creative, technical, and analytical skills, and uses design thinking and user centered design principles to solve challenging business problems.</p>
         <button class="btn btn-lg btn-warning my-2" type="submit">Let's talk &rarr;</button>
       </div>
@@ -106,7 +106,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function(){
       Typed.new('.type', {
-        strings: ["Digital Marketer", "UX Designer", "UX Researcher", "Digital Strategist", "Problem Solver"],
+        strings: ["Digital Marketer", "UXer", "Researcher", "Strategist", "Problem Solver"],
         stringsElement: null,
         typeSpeed: 60,
         startDelay: 0,
