--- a/index.html
+++ b/index.html
@@ -9,50 +9,17 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,700|Roboto:400,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
   <title>Christopher Griffith: UX Designer, Developer, & Strategist</title>
-
-
-  <style>
-    * { font-family: 'roboto'; }
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'roboto';
-      font-weight: 900;
-    }
-
-    span.type {
-      content: '|';
-      display: inline;
-    }
-    .typed-cursor{
-      color: #ffc107;
-    }
-    /*Custom cursor animation*/
-    @keyframes blink{
-      0% { opacity:1; }
-      50% { opacity:0; }
-      100% { opacity:1; }
-    }
-    @-webkit-keyframes blink{
-      0% { opacity:1; }
-      50% { opacity:0; }
-      100% { opacity:1; }
-    }
-    @-moz-keyframes blink{
-      0% { opacity:1; }
-      50% { opacity:0; }
-      100% { opacity:1; }
-    }
-
-  </style>
 
 </head>
 <body>
 
   <!-- NAV -->
-  <nav class="navbar navbar-expand-lg navbar-light mx-5 my-5" style="background: rgba(255, 255, 255, 0.75);">
-    <a class="navbar-brand" href="#" style="font-family: 'roboto'; font-weight: 900; letter-spacing: .25px;">
-      <img src="linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="" style="background: #ffc107; padding: 2px; border-radius: 2px;">Christopher Griffith
+  <nav class="navbar navbar-expand-lg navbar-light mx-5 my-5">
+    <a class="navbar-brand" href="/">
+      <img src="linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -85,11 +52,11 @@
   <!-- END NAV -->
 
   <!-- HERO -->
-  <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
+  <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5">
     <div class="row py-5 px-3">
       <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12">
-        <h1 class="display-2 text-left yu" style="font-weight: 900;"><span class="type"></span></h1>
-        <p class="lead text-left" style="font-family: 'nunito'; font-weight: 400;">Christopher Griffith is an experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and ecommerce. He offers a unique blend of creative, technical, and analytical skills, and uses design thinking and user centered design principles to solve challenging business problems.</p>
+        <h1 class="display-2 text-left"><span class="type"></span></h1>
+        <p class="lead text-left">Christopher Griffith is an experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and ecommerce. He offers a unique blend of creative, technical, and analytical skills, and uses design thinking and user centered design principles to solve challenging business problems.</p>
         <button class="btn btn-lg btn-warning my-2" type="submit">Let's talk &rarr;</button>
       </div>
       <div class="col-md-5">
