--- a/process.html
+++ b/process.html
@@ -6,35 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700|Roboto:400,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700&display=swap" rel="stylesheet">
 
   <title>Christopher Griffith: UX Designer, Developer, & Strategist</title>
-
-
-  <style>
-    * { font-family: 'roboto'; }
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'roboto';
-      font-weight: 900;
-    }
-
-  </style>
 
 </head>
 <body>
 
   <!-- NAV -->
-  <nav class="navbar navbar-expand-lg navbar-light mx-5 my-5" style="background: rgba(255, 255, 255, 0.75);">
-    <a class="navbar-brand" href="#" style="font-family: 'roboto'; font-weight: 900; letter-spacing: .25px;">
-      <img src="linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="" style="background: #ffc107; padding: 2px; border-radius: 2px;">Christopher Griffith
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top px-4 py-4">
+    <div class="container">
+      <a class="navbar-brand" href="/">
+        <img src="img/linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith
+      </a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link active" href="/process">Process</a>
@@ -61,44 +48,53 @@
   <!-- END NAV -->
 
   <!-- HERO -->
-  <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
-    <div class="row py-5 px-3">
-      <div class="col-md-7">
-        <h1 class="display-3 text-left" style="font-weight: 900;">A User-Centered Approach</h1>
-        <p class="lead text-left" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
-      <div class="col-md-5">
-        <img src="flow.svg" class="img-fluid">
-      </div>
-    </div>
-  </div>
-
-  <div class="jumbotron jumbotron-fluid mx-0 my-0 py-0 px-5" style="background: transparent;">
-
-    <div class="row pt-5 pb-5">
-      <div class="col-md-6">
-        <img src="map.svg" class="img-fluid">
-      </div>
-      <div class="col-md-6">
-        <h2 class="display-4" style="font-weight: 900;">Lorrem Ipsum</h2>
-        <p class="lead" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-    </div>
-
-    <div class="row pt-5 pb-5">
-      <div class="col-md-6">
-        <h2 class="display-4" style="font-weight: 900;">Lorrem Ipsum</h2>
-        <p class="lead" style="font-family: 'nunito'; font-weight: 400;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="chart.svg" class="img-fluid">
+  <div class="jumbotron jumbotron-fluid mx-0">
+    <div class="container">
+      <div class="row justify-content-md-center mt-5 pt-5 pb-0">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
+          <h1 class="display-3">User Centered & Data Driven</h1>
+          <p class="lead" style="font-size:2.5rem !important;">A process rooted in research and analytics</p>
+        </div>
       </div>
     </div>
   </div>
   <!-- END HERO -->
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+  <div class="container-fluid text-center">
+    <div class="row justify-content-md-center">
+      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 text-left">
+        <img src="img/research.svg" class="img-fluid"/>
+      </div>
+    </div>
+  </div>
+
+  <div class="container py-5">
+    <div class="row justify-content-md-center">
+      <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
+        <h1 class="display-4"></h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
+        <p class="lead">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
+      </div>
+    </div>
+  </div>
+
+  
+
+  <div class="container">
+    <div class="row justify-content-md-center py-5">
+      <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 text-left">
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor elit sed vulputate. Venenatis lectus magna fringilla urna porttitor. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Facilisi nullam vehicula ipsum a arcu cursus. Eros in cursus turpis massa tincidunt dui ut ornare. Feugiat nibh sed pulvinar proin gravida hendrerit. Pretium lectus quam id leo in vitae turpis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Quis auctor elit sed vulputate mi sit amet mauris commodo. At volutpat diam ut venenatis tellus in metus vulputate. Enim ut tellus elementum sagittis vitae et leo duis.</p>
+        <p class="lead">Diam donec adipiscing tristique risus nec. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Eget velit aliquet sagittis id. Lobortis scelerisque fermentum dui faucibus in ornare. A arcu cursus vitae congue mauris rhoncus. Sem nulla pharetra diam sit. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Gravida neque convallis a cras semper auctor neque vitae. At quis risus sed vulputate odio ut enim. Egestas quis ipsum suspendisse ultrices gravida. Arcu cursus euismod quis viverra nibh. Facilisis magna etiam tempor orci eu lobortis elementum. Etiam tempor orci eu lobortis. Libero id faucibus nisl tincidunt. Adipiscing commodo elit at imperdiet dui. Justo donec enim diam vulputate ut pharetra sit.</p>
+        <p class="lead">Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Dignissim convallis aenean et tortor at risus viverra adipiscing. Tristique risus nec feugiat in. Cursus sit amet dictum sit amet justo donec enim. Aliquam purus sit amet luctus venenatis lectus. Leo integer malesuada nunc vel risus commodo viverra maecenas accumsan. Turpis massa sed elementum tempus. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Aliquam ultrices sagittis orci a scelerisque. Ac tortor dignissim convallis aenean et tortor. Ac ut consequat semper viverra nam libero justo. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Volutpat lacus laoreet non curabitur gravida arcu ac tortor. Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum integer. Auctor neque vitae tempus quam pellentesque nec. Arcu bibendum at varius vel pharetra vel turpis nunc eget. A arcu cursus vitae congue. Etiam non quam lacus suspendisse faucibus interdum posuere. At augue eget arcu dictum.</p>
+        <p class="lead">Pretium aenean pharetra magna ac. A erat nam at lectus urna duis convallis convallis. Nunc sed blandit libero volutpat sed cras ornare. At augue eget arcu dictum varius duis at consectetur. Id cursus metus aliquam eleifend mi in nulla posuere. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Semper quis lectus nulla at volutpat diam ut venenatis. Tellus at urna condimentum mattis pellentesque id.</p>
+        <p class="lead">Accumsan tortor posuere ac ut. Lectus mauris ultrices eros in cursus. Leo vel orci porta non pulvinar. Gravida quis blandit turpis cursus in hac. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Tristique magna sit amet purus gravida quis blandit turpis cursus. Tincidunt augue interdum velit euismod in pellentesque. Etiam dignissim diam quis enim lobortis. Ornare lectus sit amet est placerat in egestas erat imperdiet. Montes nascetur ridiculus mus mauris vitae ultricies leo. Tristique senectus et netus et.</p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
