--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
   <div class="process-section py-5" style="background: #f2f2f2;">
     <div class="container py-5">
       <div class="row">
-        <div class="col-4">
+        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-5">
           <div class="list-group" id="list-tab" role="tablist">
             <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">UX Design</a>
             <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">User Research</a>
             <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Information Architecture</a>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
           <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
               <h3 class="display-5">Media heading</h3>
