--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
         </div>
         <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left pl-5 py-5">
           <h2 class="display-4" style="color: #343a40;">A design thinker</h1>
-          <p class="lead" style="color: #343a40;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-          <p class="lead" style="color: #343a40;">Ut enim ad minim veniam, quis nostrud exercitation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-          <button class="btn btn-md btn-outline-dark my-2" type="submit">A process that yields results &rarr;</button>
+          <p class="lead" style="color: #343a40;">From ideation and problem definition, to wireframing and prototyping, to testing and evaluation, Christopher uses a process that both starts and ends with the user in mind.</p>
+          <button class="btn btn-md btn-outline-dark my-2" type="submit">See Christopher's process &rarr;</button>
         </div>
       </div>
     </div>
