--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left pl-5 py-5">
           <h2 class="display-4" style="color: #343a40;">A design thinker</h1>
-          <p class="lead" style="color: #343a40;">From ideation and problem definition, to wireframing and prototyping, to testing and evaluation, Christopher uses a process that both starts and ends with the user in mind.</p>
+          <p class="lead" style="color: #343a40;">From ideation and problem definition, to testing and evaluation, Christopher's process includes a well crafted approach that both starts and ends with the user in mind.</p>
           <button class="btn btn-md btn-outline-dark my-2" type="submit">See Christopher's process &rarr;</button>
         </div>
       </div>
