--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left pl-5 py-5">
           <h2 class="display-4" style="color: #343a40;">A design thinker</h2>
           <p class="lead" style="color: #343a40;">From ideation and problem definition, to testing and evaluation, Christopher's process includes a well crafted approach that both starts and ends with the user in mind.</p>
-          <a href="/process" class="btn btn-md btn-outline-dark my-2" type="submit">See Christopher's process &rarr;</a>
+          <button href="/process" class="btn btn-md btn-outline-dark my-2" type="submit">See Christopher's process &rarr;</button>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
   <div class="process-section py-5" style="background: #f2f2f2;">
     <div class="container py-5">
       <div class="row">
-        <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left pl-5 py-5">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
           <h2 class="display-4" style="color: #343a40;">Experience & Project History</h2>
         </div>
       </div>
