--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="process-section py-5" style="background: #f2f2f2;">
     <div class="container py-5">
       <div class="row">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left pb-5">
           <h2 class="display-4" style="color: #343a40;">Experience & Project History</h2>
         </div>
       </div>
@@ -97,17 +97,17 @@
         <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
           <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-              <h3 class="display-5">Media heading</h3>
+              <h3 class="display-5">UX Design</h3>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                 <button class="btn btn-sm btn-dark my-2" type="submit">CTA →</button>
             </div>
             <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-                <h3 class="display-5">Media heading</h3>
+                <h3 class="display-5">User Research</h3>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                 <button class="btn btn-sm btn-dark my-2" type="submit">CTA →</button>
             </div>
             <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-              <h3 class="display-5">Media heading</h3>
+              <h3 class="display-5">Information Architecture</h3>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                 <button class="btn btn-sm btn-dark my-2" type="submit">CTA →</button>
             </div>
@@ -117,6 +117,18 @@
     </div>
   </div>
   <!-- END WORK -->
+
+  <footer class="container py-5">
+      <div class="row">
+        <div class="col-12 col-md text-left">
+          <a class="navbar-brand" href="/"><img src="img/linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith</a>
+          <small class="d-block mb-3 text-muted">© 2019</small>
+        </div>
+        <div class="col-12 col-md text-right">
+          <a href="https://linkedin.com/in/griffithchristopher"><img src="img/LI-In-Bug.png" width="30" height="30" class="d-inline-block align-top mr-2" alt=""></a>
+        </div>
+      </div>
+    </footer>
 
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
