--- a/index.html
+++ b/index.html
@@ -120,12 +120,9 @@
 
   <footer class="container py-5">
       <div class="row">
-        <div class="col-12 col-md text-left">
+        <div class="col-12 col-md text-center">
           <a class="navbar-brand" href="/"><img src="img/linegraph.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="">Christopher Griffith</a>
-          <small class="d-block mb-3 text-muted">© 2019</small>
-        </div>
-        <div class="col-12 col-md text-right">
-          <a href="https://linkedin.com/in/griffithchristopher"><img src="img/LI-In-Bug.png" height="30" class="d-inline-block align-top mr-2" alt="LinkedIn"></a>
+          <small class="d-block text-muted">© 2019</small>
         </div>
       </div>
     </footer>
