--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container py-5">
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left pb-5">
-          <h2 class="display-4" style="color: #343a40;">Experience & Project History</h2>
+          <h2 class="display-4" style="color: #343a40;">Experience and project history</h2>
         </div>
       </div>
       <div class="row">
