--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="/resume.pdf" target="_blank">Resume</a>
         </li>
       </ul>
-      <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Let's talk &rarr;</button>
+      <a href="mailto:chrisrgriff@gmail.com" class="btn btn-outline-warning my-2 my-sm-0" role="button">Let's talk &rarr;</button>
     </div>
   </nav>
   <!-- END NAV -->
@@ -54,7 +54,7 @@
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left">
           <h1 class="display-2"><span class="type"></span></h1>
           <p class="lead">Christopher Griffith is an experienced jack of all trades from Wilmington, Delaware with a demonstrated history in SaaS and e-commerce. He offers a unique blend of creative, technical, and analytical skills, and uses <a href="/process">design thinking</a> and user centered design principles to solve <a href="/work">challenging business problems</a>.</p>
-          <button class="btn btn-lg btn-warning my-2" type="submit">Let's talk &rarr;</button>
+          <a href="mailto:chrisrgriff@gmail.com" class="btn btn-lg btn-warning my-2" role="button">Let's talk &rarr;</button>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="col-xl-7 col-lg-12 col-md-12 col-sm-12 text-left pl-5 py-5">
           <h2 class="display-4" style="color: #343a40;">A design thinker</h2>
           <p class="lead" style="color: #343a40;">From ideation and problem definition, to testing and evaluation, Christopher's process includes a well crafted, data- driven approach that both starts and ends with the user in mind.</p>
-          <button href="/process" class="btn btn-md btn-outline-dark my-2" type="submit">See Christopher's process &rarr;</button>
+          <a href="/process" class="btn btn-md btn-outline-dark my-2" role="button">See Christopher's process &rarr;</a>
         </div>
       </div>
     </div>
@@ -99,17 +99,17 @@
             <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
               <h3 class="display-5">UX Design</h3>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                <button class="btn btn-sm btn-dark my-2" type="submit">CTA →</button>
+                <a href="/work#design" class="btn btn-sm btn-dark my-2" role="button">CTA →</button>
             </div>
             <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
                 <h3 class="display-5">User Research</h3>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                <button class="btn btn-sm btn-dark my-2" type="submit">CTA →</button>
+                <a href="/work#research" class="btn btn-sm btn-dark my-2" role="button">CTA →</button>
             </div>
             <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
               <h3 class="display-5">Information Architecture</h3>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                <button class="btn btn-sm btn-dark my-2" type="submit">CTA →</button>
+                <a href="/work#ia" class="btn btn-sm btn-dark my-2" role="button">CTA →</button>
             </div>
           </div>
         </div>
