--- a/index.html
+++ b/index.html
@@ -87,33 +87,39 @@
     <div class="container py-5">
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-left pb-5">
-          <h2 class="display-4" style="color: #343a40;">Experience and project history</h2>
+          <h2 class="display-4" style="color: #343a40;">Proven experiences</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-5">
           <div class="list-group" id="list-tab" role="tablist">
-            <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">UX Design</a>
-            <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">User Research</a>
-            <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Information Architecture</a>
+            <a class="list-group-item list-group-item-action active" id="a-list" data-toggle="list" href="#a" role="tab" aria-controls="a">UX Design</a>
+            <a class="list-group-item list-group-item-action" id="b-list" data-toggle="list" href="#b" role="tab" aria-controls="b">User Research</a>
+            <a class="list-group-item list-group-item-action" id="c-list" data-toggle="list" href="#c" role="tab" aria-controls="c">Information Architecture</a>
+            <a class="list-group-item list-group-item-action" id="d-list" data-toggle="list" href="#d" role="tab" aria-controls="d">Development</a>
           </div>
         </div>
         <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
           <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+            <div class="tab-pane fade show active" id="a" role="tabpanel" aria-labelledby="a-list">
               <h3 class="display-5">UX Design</h3>
-                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                <a href="/work#design" class="btn btn-sm btn-dark my-2" role="button">CTA →</a>
+                <p>When paired with Christopher's background in usability and inclusive design, his experiences sketching, wireframing, and prototyping offer the skills needed to jumpstart any user experience design project.</p>
+                <a href="/work#design" class="btn btn-sm btn-dark my-2" role="button">See Christopher's design work →</a>
             </div>
-            <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+            <div class="tab-pane fade" id="b" role="tabpanel" aria-labelledby="b-list">
                 <h3 class="display-5">User Research</h3>
-                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                <a href="/work#research" class="btn btn-sm btn-dark my-2" role="button">CTA →</a>
+                <p>Persona building and usability testing only scratch the surface – Christopher has a deep understanding of the importance that research plays within the design process.</p>
+                <a href="/work#research" class="btn btn-sm btn-dark my-2" role="button">See Christopher's research work →</a>
             </div>
-            <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+            <div class="tab-pane fade" id="c" role="tabpanel" aria-labelledby="c-list">
               <h3 class="display-5">Information Architecture</h3>
-                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                <a href="/work#ia" class="btn btn-sm btn-dark my-2" role="button">CTA →</a>
+                <p>Christopher has years of practice in content strategy including hands on experience with CMS tools and the development of visual sitemaps.</p>
+                <a href="/work#ia" class="btn btn-sm btn-dark my-2" role="button">See Christopher's IA work →</a>
+            </div>
+            <div class="tab-pane fade" id="d" role="tabpanel" aria-labelledby="d-list">
+              <h3 class="display-5">Development</h3>
+                <p>Bridging the gap between design and development, Christopher's strong background and demonstrated history working in HTML, CSS, and JavaScript help make wireframes a reality.</p>
+                <a href="/work#ia" class="btn btn-sm btn-dark my-2" role="button">See Christopher's IA work →</a>
             </div>
           </div>
         </div>
