--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="tab-pane fade" id="d" role="tabpanel" aria-labelledby="d-list">
               <h3 class="display-5">Development</h3>
                 <p>Bridging the gap between design and development, Christopher's strong background and demonstrated history working in HTML, CSS, and JavaScript help make wireframes a reality.</p>
-                <a href="/work#ia" class="btn btn-sm btn-dark my-2" role="button">See Christopher's IA work →</a>
+                <a href="/work#dev" class="btn btn-sm btn-dark my-2" role="button">See Christopher's development work →</a>
             </div>
           </div>
         </div>
