--- a/index.html
+++ b/index.html
@@ -30,14 +30,8 @@
         <li class="nav-item">
           <a class="nav-link" href="/process">Process</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Work
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/work/research">Research</a>
-            <a class="dropdown-item" href="/work/design">Design</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/process">Work</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
