--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="/process">Process</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/process">Work</a>
+          <a class="nav-link" href="/work">Work</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
